--- a/everystreet.ipynb
+++ b/everystreet.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "from network import Network\n",
     "from network.algorithms import hierholzer\n",
-    "ox.config(use_cache=True, log_console=True)"
+    "ox.settings.use_cache = True\n",
+    "ox.settings.log_console = True"
    ]
   },
   {
@@ -63,7 +64,7 @@
     "org_graph = ox.graph_from_place(location, custom_filter=CUSTOM_FILTER)\n",
     "\n",
     "# Simplifying the original directed multi-graph to undirected, so we can go both ways in one way streets\n",
-    "graph = ox.utils_graph.get_undirected(org_graph)\n",
+    "graph = ox.convert.to_undirected(org_graph)\n",
     "fig, ax = ox.plot_graph(graph, node_zorder=2, node_color=\"k\", bgcolor=\"w\")"
    ]
   },
